# rust

./: .gitignore  README.md
borrowing/error_creating_variable/: Cargo.toml
clap/clap-cli/: Cargo.toml
clap/clap-cli/src/: main.rs
compress/directory-as-gz/: README.md
compress/file-as-gz/: README.md
cross-compilation/: README.md
cross-compilation/docker-custom-image/: Dockerfile  makefile
cross-compilation/docker-default-image-no-dockerfile/: README.md  makefile
csv/read/: README.md  contacts.csv  makefile
datetime/primitive_date_time/: README.md
db/sqlx/: README.md  makefile
db/sqlx/sqlx/: Cargo.toml
db/sqlx/sqlx/migrations/: 20230713212636_birthdays.up.sql
db/sqlx/sqlx/src/: main.rs
file_size/: README.md
hashmap/sort_hashmap/: Cargo.toml
http/: README.md
http/request-ip/: Cargo.toml
hyper/request-url/: Cargo.toml
path/: README.md
read-config/accept-command-line-inputs/: README.md
read-config/read-config-file/: README.md
read-config/read-environment-variables/: README.md
regex/: .gitignore
regex/ip/: Cargo.toml  README.md
regex/log_extract_value/: Cargo.toml
regex/log_extract_values/: Cargo.toml
regex/performance/: Cargo.toml
regex/performance-logs/: README.md
regex/performance-python/: main.py
regex/phone_number/: Cargo.toml  README.md
reqwest/post-request/: Cargo.toml
serde/: README.md
serde/basic_operations/: Cargo.toml
sqlx/: README.md
sqlx/migrations/: README.md  makefile
stack-and-heap/: README.md
tracing/: README.md
tracing/tracing/: Cargo.toml
warp/hello-world/: README.md  makefile
(+62 files in other folders)
