[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.6.3", features = [ "runtime-tokio-rustls", "migrate", "postgres" ]}
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.27"

