[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
sqlx = {version = "0.6.3", features = [ "chrono", "migrate", "postgres", "runtime-tokio-rustls" ]}
tokio = { version = "1.2", features = ["full"] }

